# webscraping-and-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: agents_intro.ipynb  broswerbase.ipynb  browser-use.ipynb  webscrape_examples.ipynb
src/browser-use_logs/easy/: conversation_2.txt  conversation_3.txt  conversation_4.txt  conversation_5.txt  conversation_6.txt  conversation_7.txt  conversation_8.txt  conversation_9.txt  results.txt
src/browser-use_logs/medium/: conversation_10.txt  conversation_11.txt  conversation_12.txt  conversation_2.txt  conversation_3.txt  conversation_4.txt  conversation_5.txt  conversation_6.txt  conversation_7.txt  conversation_8.txt  conversation_9.txt  results.txt
